Fixed navbar alignment

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@ footer {
 
 .content {
     max-width: 1250px;
-    margin: auto;
+    margin-left: auto;
     padding: 0px 30px;
 }
 
@@ -58,7 +58,7 @@ footer {
 .navbar .content {
     display:flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content:space-between;
     margin-right: -15px;
 }
 
